set(the_description "The UbiTrack utGLFWConsole app")
ut_add_app(utGLFWConsole DEPS utcore utdataflow utfacade utvision utvisualization)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/../../cmake")

FIND_PACKAGE(GLFW)
FIND_PACKAGE(GLEW)
IF(GLEW_FOUND)
	SET(HAVE_GLEW 1)
	add_definitions(-DHAVE_GLEW)
ENDIF(GLEW_FOUND)
IF(GLFW_FOUND)
	set(HAVE_GLFW 1)
	ut_app_include_directories(${UBITRACK_CORE_DEPS_INCLUDE_DIR} ${OPENCV_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR} ${GLFW_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR} "${CMAKE_CURRENT_SOURCE_DIR}/../../src")
	ut_glob_app_sources(SOURCES "glfw_*.cpp")
	ut_create_executable(${PTHREAD_LIBRARIES} ${OPENGL_LIBRARIES} ${GLFW_LIBRARY} ${GLEW_LIBRARIES})
ENDIF(GLFW_FOUND)
#set_target_properties(${the_target} PROPERTIES LINK_FLAGS "/NODEFAULTLIB:atlthunk.lib /NODEFAULTLIB:atlsd.lib /DEBUG")
# ut_module_include_directories(../../src ${CMAKE_CURRENT_BINARY_DIR}/../../src)

